intent app java

--- a/app/src/main/res/layout/activity_hacktiv_layout_view.xml
+++ b/app/src/main/res/layout/activity_hacktiv_layout_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".HacktivLayoutView"
+    tools:context=".HacktivLayoutViewLinear"
     android:background="@color/background_apps"
     android:weightSum="2">
 
