--- a/app/src/main/res/layout/activity_hacktiv_sesi6.xml
+++ b/app/src/main/res/layout/activity_hacktiv_sesi6.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context=".HacktivSesi6">
+    tools:context=".HacktivSesi6_main">
 
     <TextView
         android:id="@+id/viewRegistrasi"
